Добавляем меню. Часть 1. ОСтановились над исправлением отображения в мобильной версии.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -432,7 +432,7 @@ header{
 	color: #fff;
 	text-decoration: none;
 }
-#bs-example-navbar-collapse-1 li a:hover{
+#w0-collapse li a:hover{
 	color:#ff5b23;
 }
 @media all and (max-width: 1200px) and (min-width: 992px){
@@ -451,7 +451,7 @@ header{
 	.logo img {
 	    display: block;
 	    width: 100%;
-	    max-width: 400px; 
+	    max-width: 400px;
 	}
 	.logo a{
 		display: inline-block;
@@ -482,7 +482,7 @@ header{
 	.logo img {
 	    display: block;
 	    width: 100%;
-	    max-width: 400px; 
+	    max-width: 400px;
 	}
 	.logo a{
 		display: inline-block;
@@ -504,7 +504,7 @@ header{
 	.navbar-toggle .icon-bar {
 	    background-color: #ccc;
 	}
-	#bs-example-navbar-collapse-1{
+	#w0-collapse{
 		background-color: #000;
 	    bottom: 0;
 	    height: 100%;
@@ -530,16 +530,16 @@ header{
 	}
 	.menu_top .navbar-toggle.active .icon-bar:nth-child(2){
 		-moz-transform: rotate(45deg);
-	    -ms-transform: rotate(45deg); 
-	    -webkit-transform: rotate(45deg); 
+	    -ms-transform: rotate(45deg);
+	    -webkit-transform: rotate(45deg);
 	    -o-transform: rotate(45deg);
 	    transform: rotate(45deg);
 	    margin-top: 0;
 	}
 	.menu_top .navbar-toggle.active .icon-bar:nth-child(4){
 		-moz-transform: rotate(-45deg);
-	    -ms-transform: rotate(-45deg); 
-	    -webkit-transform: rotate(-45deg); 
+	    -ms-transform: rotate(-45deg);
+	    -webkit-transform: rotate(-45deg);
 	    -o-transform: rotate(-45deg);
 	    transform: rotate(-45deg);
 	}
@@ -547,7 +547,7 @@ header{
 		margin-top: 0;
 		position: absolute;
 	}
-	#bs-example-navbar-collapse-1 li{
+	#w0-collapse li{
 		float: none;
 	    display: block;
 	    position: relative;
@@ -556,7 +556,7 @@ header{
 	    border-left: 0px solid #2f2f2f;
 	    border-right: 0px solid #2f2f2f;
 	}
-	#bs-example-navbar-collapse-1 li a{
+	#w0-collapse li a{
 		text-align: center;
 	}
 	.menu_top li a::before{
