--- a/web/css/style-list-prod.css
+++ b/web/css/style-list-prod.css
@@ -878,6 +878,35 @@ header{
 .filter button:hover{
 	opacity: 0.9;
 }
+
+.catalog a:last-child{
+	display: block;
+	text-align: center;
+	background-color: #000;
+	padding: 10px 0;
+	color: #fff;
+	position: relative;
+	z-index: 1;
+
+}
+.catalog .catalog_category{
+	margin-bottom: 20px;
+}
+.catalog .catalog_category img{
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	-ms-transition: all 1s ease;
+	-o-transition: all 1s ease;
+	transition: all 1s ease;
+}
+.catalog .catalog_category:hover img{
+	transform: scale(1.1);
+}
+.catalog a:last-child:hover{
+	text-decoration: none;
+	opacity: 0.8;
+}
+
 @media all and (max-width: 1200px) and (min-width: 992px){
 	.ban_block p {
 	    color: #fff;
