Начало реализации сортировки на транице с товарами. Это 11 урок на канале Liblessons: https://www.youtube.com/watch?v=H47IViV8cTo&list=PLO5wQsXP_5gXUTti6GNPSQgoBAWhLCG-7&index=11 И будет ли продолжение не знаю, пока на этом всё. 17 августа 2018 12:40

--- a/web/css/style-list-prod.css
+++ b/web/css/style-list-prod.css
@@ -793,6 +793,15 @@ header{
 .value_cart span:hover{
 	opacity: 0.9;
 }
+.sortirovka_and_number_prod .control-label{
+	display: none;
+}
+.sortirovka_and_number_prod .form-group{
+	display: inline-block;
+}
+.field-sortform-number{
+	width: 65px;
+}
 .sortirovka_and_number_prod p{
 	display: inline-block;
 	margin-right: 10px;
